# BeagleBoneProjects

./: README.md
.github/workflows/: ci.yml
cpp/BeagleBoneGpioControl/: CMakeLists.txt  main.cpp  test.py
cpp/BeagleBoneGpioControl/include/: gpio.h  gpio_interface.h  ultrasonic.h
cpp/BeagleBoneGpioControl/src/: CMakeLists.txt  gpio.cpp  ultrasonic.cpp
cpp/BeagleBoneGpioControl/tests/: CMakeLists.txt  gpio_test.cpp  ultrasonic_test.cpp
